Revise wording in about page

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Things about me"
+description: "Everything me"
 header-img: "img/about-bg.jpg"
 ---
 
