Add Google+ badge in about page

--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@ description: "Everything me"
 header-img: "img/about-bg.jpg"
 ---
 
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<div style="text-align: center;">
+    <g:person href="https://plus.google.com/+AgustinusKristiadi" data-rel="author"></g:person>
+</div>
+
 <h2 class="section-heading">About Me</h2>
 <p>Hi there <strong>wiseodd</strong> here. I'm a software developer from Indonesia. I'm currently residing in Indonesia's capital city, Jakarta.</p>
 
