--- a/about.html
+++ b/about.html
@@ -10,15 +10,15 @@ header-img: "img/about-bg.jpg"
     <g:person href="https://plus.google.com/+AgustinusKristiadi" data-rel="author"></g:person>
 </div>
 
-<h2 class="section-heading">About Me</h2>
+<h2 class="section-header">About Me</h2>
 <p>Hi there <strong>wiseodd</strong> here. I'm a software developer from Indonesia. I'm currently residing in Indonesia's capital city, Jakarta.</p>
 
 <p>I'm starting this blog to share about my view, thought, and experience. I feel like there are some experiences and thoughts that other people might find them useful. Also this blog will function as my life and travel journal.</p>
 
-<h2 class="section-heading">Why Third World Nomad</h2>
+<h2 class="section-header">Why Third World Nomad</h2>
 <p>The "Third World" part is easy, really. I'm from Indonesia, which happen to be third world country aka developing country. Now, for "Nomad" part, it's because I really like the idea of nomadic life. Being Digital Nomad is one of my life goal. Ever since I travelled abroad in 2013, I feel the wanderlust, the urge, and the itchiness to travel more and more, to the point that I want to travel full time. Although I'm not a digital nomad yet, definitely I can see me being one in my horizon.</p>
 
 <p>Nomadic life is definitely already in my blood. Early in my life, my family is pretty much semi-nomadic, as we've changed our residence for four times in my first 10 years. In my 20 something lifespan, I've change my residence for total five times. Pretty much beyond average of Indonesian family/person. And I don't have plan to stop, I want to just keep going and see the world. Because for me, life is too short to settle down.</p>
 
-<h2 class="section-heading">Next</h2>
+<h2 class="section-header">Next</h2>
 <p>So, this site and blog is the first step for me towards being a digital nomad. Because, like one of Chinese proverb says: "A journey of a thousand li begins with a single step". And this is my first real, concrete step.</p>
