--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,21 @@ description: "Things I've built"
 header-img: "img/portfolio-bg.jpg"
 ---
 
-<h2 class="section-header">Mobile Apps</h2>
+
+<h2 class="section-header">Machine Learning, Computer Vision</h2>
+<ul>
+    <li><a href="https://github.com/wiseodd/cuda-pso"><strong>CUDA-PSO</strong></a> - Implementation of Particle Swarm Optimization (PSO) using CUDA (C++)</li>
+    <li><a href="https://github.com/wiseodd/swarm-image-segmenter"><strong>swarm-image-segmenter</strong></a> - Implementation of PSO for image segmentation task using CUDA (C++)</li>
+</ul>
+
+<h2 class="section-header">Publication</h2>
+<ul>
+    <li>
+        Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. "Parallel particle swarm optimization for image segmentation." <i>The Second International Conference on Digital Enterprise and Information Systems (DEIS2013).</i> The Society of Digital Information and Wireless Communication, 2013.
+    </li>
+</ul>
+
+<h2 class="section-header">Mobile App</h2>
 <ul>
     <li><a href="https://github.com/pumpkinz/pumpkin-reader"><strong>Pumpkin Reader</strong></a> - Hacker News reader for Android with material design, done right.</li>
 </ul>
@@ -14,10 +28,4 @@ header-img: "img/portfolio-bg.jpg"
 <ul>
     <li><a href="http://thirdworldnomad.com"><strong>thirdworldnomad.com</strong></a> - Personal site and blog (this blog!)</li>
     <li><a href="http://ombaq.com"><strong>ombaq.com</strong></a> - Social media monitoring and collaboration tools, developed with AngularJS and Laravel (PHP)</li>
-</ul>
-
-<h2 class="section-header">Machine Learning, Computer Vision</h2>
-<ul>
-    <li><a href="https://github.com/wiseodd/cuda-pso"><strong>CUDA-PSO</strong></a> - Implementation of Particle Swarm Optimization (PSO) using CUDA (C++)</li>
-    <li><a href="https://github.com/wiseodd/swarm-image-segmenter"><strong>swarm-image-segmenter</strong></a> - Implementation of PSO for image segmentation task using CUDA (C++)</li>
 </ul>
