Add Kota Kinabalu photo essay

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thoughts, experiences, field reports, and tech blogs from third world, nomad, software developer"
+description: "Thoughts, photo essays, field reports, and tech blogs of a third world, nomad, software engineer"
 ---
 
 {% for post in paginator.posts %}
