Revamp tech blog and travel blog heading

--- a/techblog.html
+++ b/techblog.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-description: "Third World Nomad's Tech Blog"
-title: "Tech Blog"
+description: "Machine Learning? Check. Bayesian Method? Check. Python? Check!"
+title: "Third World Nomad's Tech Blog"
 weight: 5
 ---
 
