--- a/travelblog.html
+++ b/travelblog.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-description: "Third World Nomad's Travel Blog"
-title: "Travel Blog"
+description: "Travel Journals, Photo Essays, Foods, Hiking Trip, and Many More!"
+title: "Third World Nomad's Travel Blog"
 weight: 4
 ---
 
