--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ header-img: "img/about-bg.jpg"
 </div>
 
 <h2 class="section-header">About Me</h2>
-<p>Hi there <strong>wiseodd</strong> here. I'm a software developer from Indonesia. I'm currently residing in Indonesia's capital city, Jakarta.</p>
+<p>Hi there <strong>Agustinus Kristiadi</strong> here. I'm a software developer from Indonesia. I'm currently residing in Indonesia.</p>
 
 <p>I'm starting this blog to share about my view, thought, and experience. I feel like there are some experiences and thoughts that other people might find them useful. Also this blog will function as my life and travel journal.</p>
 
