--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thoughts, photo essays, field reports, and tech blogs of a third world, nomad, software engineer"
+description: "Thoughts, photo essays, field reports, and tech blogs!"
 ---
 
 {% for post in paginator.posts %}
