--- a/techblog.html
+++ b/techblog.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 description: "Machine Learning? Check. Bayesian Method? Check. Python? Check!"
-title: "Third World Nomad's Tech Blog"
+title: "Tech Blog"
 weight: 5
 ---
 
