--- a/about.html
+++ b/about.html
@@ -5,11 +5,10 @@ description: "Everything me"
 header-img: "img/about-bg.jpg"
 ---
 
-<script src="https://apis.google.com/js/platform.js" async defer></script>
-<div style="text-align: center;">
-    <g:person href="https://plus.google.com/+AgustinusKristiadi" data-rel="author"></g:person>
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
+    <h2 class="section-header">About Me</h2>
+
+    You can find everything about me <a style="color: #337ab7; text-decoration: underline" href="https://drive.google.com/file/d/0BzFf_WMmDYN8RU5IZHQ5b0pucDA/view?usp=sharing">in my CV here</a>!
 </div>
-
-<h2 class="section-header">About Me</h2>
-
-You can find everything about me <a style="color: #337ab7;" href="https://drive.google.com/file/d/0BzFf_WMmDYN8RU5IZHQ5b0pucDA/view?usp=sharing">in my CV here</a>!
+</div>
