--- a/portfolio.html
+++ b/portfolio.html
@@ -5,29 +5,34 @@ description: "Things I've built"
 header-img: "img/portfolio-bg.jpg"
 ---
 
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
 
-<h2 class="section-header">Machine Learning, Deep Learning, Computer Vision</h2>
-<ul>
-    <li><a href="https://github.com/wiseodd/generative-models"><strong>Generative Models</strong></a> - Implementation of various generative and bayesian models, e.g. GAN and VAE in Tensorflow and Keras.</li>
-    <li><a href="https://github.com/wiseodd/hipsternet"><strong>Hipsternet</strong></a> - Implementation of many flavors of neural nets, complete with many recent techniques in raw NumPy!</li>
-    <li><a href="https://github.com/wiseodd/cuda-pso"><strong>CUDA-PSO</strong></a> - Implementation of Particle Swarm Optimization (PSO) using CUDA (C++)</li>
-    <li><a href="https://github.com/wiseodd/swarm-image-segmenter"><strong>swarm-image-segmenter</strong></a> - Implementation of PSO for image segmentation task using CUDA (C++)</li>
-</ul>
+    <h2 class="section-header">Machine Learning, Deep Learning, Computer Vision</h2>
+    <ul>
+        <li><a href="https://github.com/wiseodd/generative-models"><strong>Generative Models</strong></a> - Implementation of various generative and bayesian models, e.g. GAN and VAE in Tensorflow and Keras.</li>
+        <li><a href="https://github.com/wiseodd/hipsternet"><strong>Hipsternet</strong></a> - Implementation of many flavors of neural nets, complete with many recent techniques in raw NumPy!</li>
+        <li><a href="https://github.com/wiseodd/cuda-pso"><strong>CUDA-PSO</strong></a> - Implementation of Particle Swarm Optimization (PSO) using CUDA (C++)</li>
+        <li><a href="https://github.com/wiseodd/swarm-image-segmenter"><strong>swarm-image-segmenter</strong></a> - Implementation of PSO for image segmentation task using CUDA (C++)</li>
+    </ul>
 
-<h2 class="section-header">Publication</h2>
-<ul>
-    <li>
-        Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. "Parallel particle swarm optimization for image segmentation." <i>The Second International Conference on Digital Enterprise and Information Systems (DEIS2013).</i> The Society of Digital Information and Wireless Communication, 2013.
-    </li>
-</ul>
+    <h2 class="section-header">Publication</h2>
+    <ul>
+        <li>
+            Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. "Parallel particle swarm optimization for image segmentation." <i>The Second International Conference on Digital Enterprise and Information Systems (DEIS2013).</i> The Society of Digital Information and Wireless Communication, 2013.
+        </li>
+    </ul>
 
-<h2 class="section-header">Mobile App</h2>
-<ul>
-    <li><a href="https://github.com/pumpkinz/pumpkin-reader"><strong>Pumpkin Reader</strong></a> - Hacker News reader for Android with material design, done right.</li>
-</ul>
+    <h2 class="section-header">Mobile App</h2>
+    <ul>
+        <li><a href="https://github.com/pumpkinz/pumpkin-reader"><strong>Pumpkin Reader</strong></a> - Hacker News reader for Android with material design, done right.</li>
+    </ul>
 
-<h2 class="section-header">Web Dev</h2>
-<ul>
-    <li><a href="http://wiseodd.github.io"><strong>wiseodd.github.io</strong></a> - Personal site and blog (this blog!)</li>
-    <li><a href="http://ombaq.com"><strong>ombaq.com</strong></a> - Social media monitoring and collaboration tools, developed with AngularJS and Laravel (PHP)</li>
-</ul>
+    <h2 class="section-header">Web Dev</h2>
+    <ul>
+        <li><a href="http://wiseodd.github.io"><strong>wiseodd.github.io</strong></a> - Personal site and blog (this blog!)</li>
+        <li><a href="http://ombaq.com"><strong>ombaq.com</strong></a> - Social media monitoring and collaboration tools, developed with AngularJS and Laravel (PHP)</li>
+    </ul>
+
+</div>
+</div>
