--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@ description: "Here's how"
 header-img: "img/contact-bg.jpg"
 ---
 
-<p>You could contact me via email: kristiadi7@gmail.com</p>
-<p>Please contact me if you have any inquiry or question!
-I'll be happy to discuss things with you!</p>
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
+    <p>You could contact me via email: kristiadi7@gmail.com</p>
+    <p>Please contact me if you have any inquiry or question!
+    I'll be happy to discuss things with you!</p>
+</div>
+</div>
