--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ header-img: "img/contact-bg.jpg"
 
 <div class="row">
 <div class="col-md-10 col-md-offset-1">
-    <p>You could contact me via email: kristiadi7@gmail.com</p>
+    <p>You could contact me via email: agustinus.kristiadi@protonmail.com</p>
     <p>Please contact me if you have any inquiry or question!
     I'll be happy to discuss things with you!</p>
 </div>
