--- a/about.html
+++ b/about.html
@@ -1,14 +1,97 @@
 ---
 layout: page
-title: "About"
+title: "About Me & CV"
 description: "Everything me"
 header-img: "img/about-bg.jpg"
 ---
 
-<div class="row">
-<div class="col-md-10 col-md-offset-1">
-    <h2 class="section-header">About Me</h2>
+<div id="aboutme" class="row">
+<div class="col-md-12">
+    <h1 class="section-header" style="padding-bottom: 0.8em;">Agustinus Kristiadi</h1>
 
-    You can find everything about me <a style="color: #337ab7; text-decoration: underline" href="https://drive.google.com/file/d/0BzFf_WMmDYN8RU5IZHQ5b0pucDA/view?usp=sharing">in my CV here</a>!
+    <div class="row">
+        <div class="col-md-2"><b>Email</b></div>
+        <div class="col-md-8">kristiadi@protonmail.com</div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2"><b>LinkedIn</b></div>
+        <div class="col-md-8"><a href="https://www.linkedin.com/in/agustinus-kristiadi/">https://www.linkedin.com/in/agustinus-kristiadi/</a></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2"><b>Github</b></div>
+        <div class="col-md-8"><a href="https://github.com/wiseodd">https://github.com/wiseodd</a></div>
+    </div>
+
+    <div class="row" style="padding-bottom: 3em;"></div>
+
+    <div class="row">
+        <div class="col-md-4"><h3>Education</h3></div>
+        <div class="col-md-8">
+            <h4>University of Bonn</h4>
+            <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
+            <div>Machine Learning, Probabilistic Models, Computer Vision</div>
+            <div>Current GPA: 1.3 out of 1.0</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>Universitas Atma Jaya Yogyakarta</h4>
+            <div>B.Eng., Informatics Engineering, 2009-2013</div>
+            <div>Machine Learning, Numerical Computing</div>
+            <div>GPA: 3.93 out of 4.00</div>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 2em;">
+        <div class="col-md-4"><h3>Conference Paper</h3></div>
+        <div class="col-md-8">
+            <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
+            <div>Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. “Parallel particle swarm optimization for image segmentation”. DEIS2013. The Society of Digital Information and Wireless Commu- nication, 2013.</div>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 2em;">
+        <div class="col-md-4"><h3>Preprint</h3></div>
+        <div class="col-md-8">
+            <h4>Deep Convolutional Level Set Method for Image Segmentation</h4>
+            <div>Kristiadi, Agustinus, Pranowo Pranowo. “Deep Convolutional Level Set Method for Image Segmentation”. 2017.</div>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 2em;">
+        <div class="col-md-4"><h3>Work Experience</h3></div>
+        <div class="col-md-8">
+            <h4>Universitas Atma Jaya Yogyakarta</h4>
+            <div>Research Assistant, Deep Learning for Computer Vision, 2016-2017</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>GDP Labs</h4>
+            <div>Software Engineer, Applied Machine Learning, 2013-2016</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>Astra International</h4>
+            <div>Software Engineering Intern, 2012</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>Universitas Atma Jaya Yogyakarta</h4>
+            <div>Tutor, Advanced Data Structure, 2012</div>
+            <div>Tutor, Database, 2011</div>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 2em;">
+        <div class="col-md-4"><h3>Languages</h3></div>
+        <div class="col-md-8">English (IELTS: 8.0), German (A1), Indonesian, Javanese</div>
+    </div>
+
+    <div class="row" style="padding-top: 2em;">
+        <div class="col-md-4"><h3>Skills</h3></div>
+        <div class="col-md-8">Python, C++, Java</div>
+    </div>
 </div>
+
 </div>
