--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-4"><h3>Conference Paper</h3></div>
         <div class="col-md-8">
             <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
-            <div>Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. “Parallel particle swarm optimization for image segmentation”. DEIS2013. The Society of Digital Information and Wireless Commu- nication, 2013.</div>
+            <div>Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. “Parallel particle swarm optimization for image segmentation”. DEIS2013. The Society of Digital Information and Wireless Communication, 2013.</div>
         </div>
     </div>
 
