Add link to grading system

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ header-img: "img/about-bg.jpg"
             <h4>University of Bonn</h4>
             <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
             <div>Machine Learning, Probabilistic Models, Computer Vision</div>
-            <div>Current GPA: 1.3 out of 1.0</div>
+            <div>Current GPA: 1.3 out of 1.0 (<a href="https://en.wikipedia.org/wiki/Academic_grading_in_Germany">German grading system)</a></div>
 
             <div class="row" style="padding-bottom: 1em"></div>
 
