--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ header-img: "img/about-bg.jpg"
 
     <div class="row">
         <div class="col-md-2"><b>Email</b></div>
-        <div class="col-md-8">kristiadi@protonmail.com</div>
+        <div class="col-md-8"><a href="mailto:kristiadi@protonmail.com" target="_top">kristiadi@protonmail.com</a></div>
     </div>
 
     <div class="row">
@@ -31,13 +31,11 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-8">
             <h4>University of Bonn</h4>
             <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
-            <div>Machine Learning, Probabilistic Models, Computer Vision</div>
 
             <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Universitas Atma Jaya Yogyakarta</h4>
             <div>B.Eng., Informatics Engineering, 2009-2013</div>
-            <div>Machine Learning, Numerical Computing</div>
         </div>
     </div>
 
@@ -61,12 +59,12 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-4"><h3>Work Experience</h3></div>
         <div class="col-md-8">
             <h4>Universitas Atma Jaya Yogyakarta</h4>
-            <div>Research Assistant, Deep Learning for Computer Vision, 2016-2017</div>
+            <div>Research Assistant, 2016-2017</div>
 
             <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>GDP Labs</h4>
-            <div>Software Engineer, Applied Machine Learning, 2013-2016</div>
+            <div>Software Engineer, 2013-2016</div>
 
             <div class="row" style="padding-bottom: 1em"></div>
 
