--- a/about.html
+++ b/about.html
@@ -58,6 +58,11 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-top: 2em;">
         <div class="col-md-4"><h3>Work Experience</h3></div>
         <div class="col-md-8">
+            <h4>Smart Data Analytics (SDA) Research</h4>
+            <div>Student Research Assistant, 2017-</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
             <h4>Universitas Atma Jaya Yogyakarta</h4>
             <div>Research Assistant, 2016-2017</div>
 
