Add new publication

--- a/about.html
+++ b/about.html
@@ -39,23 +39,28 @@ header-img: "img/about-bg.jpg"
         </div>
     </div>
 
-    <div class="row" style="padding-top: 2em;">
-        <div class="col-md-4"><h3>Conference Paper</h3></div>
-        <div class="col-md-8">
-            <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
-            <div>Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. “Parallel particle swarm optimization for image segmentation”. DEIS2013. The Society of Digital Information and Wireless Communication, 2013.</div>
-        </div>
-    </div>
-
-    <div class="row" style="padding-top: 2em;">
-        <div class="col-md-4"><h3>Preprint</h3></div>
+    <div class="row" style="padding-top: 3em;">
+        <div class="col-md-4"><h3>Publications</h3></div>
         <div class="col-md-8">
             <h4>Deep Convolutional Level Set Method for Image Segmentation</h4>
-            <div>Kristiadi, Agustinus, Pranowo Pranowo. “Deep Convolutional Level Set Method for Image Segmentation”. 2017.</div>
+            <div>
+                Kristiadi, Agustinus, and Pranowo Pranowo. "Deep Convolutional Level Set Method for Image Segmentation." Journal of ICT Research and Applications 11.3 (2017): 284-298.
+                [<a href="http://journals.itb.ac.id/index.php/jictra/article/download/3887/3046">pdf</a>]
+                [<a href="https://github.com/wiseodd/cnn-levelset">code</a>]
+            </div>
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
+            <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
+            <div>
+                Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. “Parallel particle swarm optimization for image segmentation”. DEIS2013. The Society of Digital Information and Wireless Communication, 2013.
+                [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
+                [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
+            </div>
         </div>
     </div>
 
-    <div class="row" style="padding-top: 2em;">
+    <div class="row" style="padding-top: 3em;">
         <div class="col-md-4"><h3>Work Experience</h3></div>
         <div class="col-md-8">
             <h4>Smart Data Analytics (SDA) Research</h4>
