--- a/about.html
+++ b/about.html
@@ -42,21 +42,30 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-top: 3em;">
         <div class="col-md-4"><h3>Publications</h3></div>
         <div class="col-md-8">
+            <h4>Incorporating Literals into Knowledge Graph Embeddings</h4>
+            <div>
+                Kristiadi, Agustinus*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. arXiv preprint arXiv:1802.00934 (2018).
+            </div>
+                [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>]
+                [<a href="https://github.com/SmartDataAnalytics/LiteralE">code</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
             <h4>Deep Convolutional Level Set Method for Image Segmentation</h4>
             <div>
-                Kristiadi, Agustinus, and Pranowo Pranowo. "Deep Convolutional Level Set Method for Image Segmentation." Journal of ICT Research and Applications 11.3 (2017): 284-298.
-                [<a href="http://journals.itb.ac.id/index.php/jictra/article/download/3887/3046">pdf</a>]
-                [<a href="https://github.com/wiseodd/cnn-levelset">code</a>]
+                Kristiadi, Agustinus, and Pranowo Pranowo. Journal of ICT Research and Applications 11.3 (2017): 284-298.
             </div>
+            [<a href="http://journals.itb.ac.id/index.php/jictra/article/download/3887/3046">pdf</a>]
+            [<a href="https://github.com/wiseodd/cnn-levelset">code</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
             <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
             <div>
-                Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. “Parallel particle swarm optimization for image segmentation”. DEIS2013. The Society of Digital Information and Wireless Communication, 2013.
-                [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
-                [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
+                Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. DEIS2013.
             </div>
+            [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
+            [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
         </div>
     </div>
 
