--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-bottom: 3em;"></div>
 
     <div class="row">
-        <div class="col-md-4"><h3>Education</h3></div>
-        <div class="col-md-8">
+        <div class="col-md-3"><h3>Education</h3></div>
+        <div class="col-md-9">
             <h4>University of Bonn</h4>
             <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
 
@@ -40,8 +40,8 @@ header-img: "img/about-bg.jpg"
     </div>
 
     <div class="row" style="padding-top: 3em;">
-        <div class="col-md-4"><h3>Publications</h3></div>
-        <div class="col-md-8">
+        <div class="col-md-3"><h3>Publications</h3></div>
+        <div class="col-md-9">
             <h4>Incorporating Literals into Knowledge Graph Embeddings</h4>
             <div>
                 Kristiadi, Agustinus*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. arXiv preprint arXiv:1802.00934 (2018).
@@ -70,8 +70,8 @@ header-img: "img/about-bg.jpg"
     </div>
 
     <div class="row" style="padding-top: 3em;">
-        <div class="col-md-4"><h3>Work Experience</h3></div>
-        <div class="col-md-8">
+        <div class="col-md-3"><h3>Experience</h3></div>
+        <div class="col-md-9">
             <h4>Smart Data Analytics (SDA) Research</h4>
             <div>Student Research Assistant, 2017-</div>
 
