--- a/about.html
+++ b/about.html
@@ -27,24 +27,46 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-bottom: 3em;"></div>
 
     <div class="row">
-        <div class="col-md-3"><h3>Education</h3></div>
+        <div class="col-md-3"><h3>Interest</h3></div>
         <div class="col-md-9">
-            <h4>University of Bonn</h4>
-            <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
-
-            <div class="row" style="padding-bottom: 1em"></div>
-
-            <h4>Universitas Atma Jaya Yogyakarta</h4>
-            <div>B.Eng., Informatics Engineering, 2009-2013</div>
+            <div>Bayesian Inference</div>
+            <div>Natural Gradient</div>
+            <div>Generative Models</div>
         </div>
     </div>
 
     <div class="row" style="padding-top: 3em;">
-        <div class="col-md-3"><h3>Publications</h3></div>
+        <div class="col-md-3"><h3>Education</h3></div>
         <div class="col-md-9">
+            <h4>University of Bonn, Germany</h4>
+            <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
+            <div>Theoretical Computer Science, Intelligent Systems</div>
+            <div>Current grade: 1.21 &nbsp (3.79 <a href="https://www.tum.de/en/studies/application-and-acceptance/grade-conversion-formula-for-grades-earned-outside-germany/">GPA equivalent</a>)</div>
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
+            <h4>Universitas Atma Jaya Yogyakarta, Indonesia</h4>
+            <div>B.Eng., Informatics Engineering, 2009-2013</div>
+            <div>Numerical Analysis, Soft Computing</div>
+            <div>GPA: 3.93</div>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 3em;">
+        <div class="col-md-3"><h3>Publication</h3></div>
+        <div class="col-md-9">
+            <h4>Improving Response Selection in Multi-turn Dialogue Systems by Incorporating Domain Knowledge</h4>
+            <div>
+              Chauduri, Debanjan, <i>Agustinus Kristiadi</i>, Jens Lehmann, Asja Fischer. CoNLL (2018).
+            </div>
+                <!-- [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>] -->
+                [<a href="https://github.com/SmartDataAnalytics/AK-DE-biGRU">code</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
             <h4>Incorporating Literals into Knowledge Graph Embeddings</h4>
             <div>
-                Kristiadi, Agustinus*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. arXiv preprint arXiv:1802.00934 (2018).
+              <i>Kristiadi, Agustinus</i>*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. arXiv preprint arXiv:1802.00934 (2018).
             </div>
                 [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/LiteralE">code</a>]
@@ -53,7 +75,7 @@ header-img: "img/about-bg.jpg"
 
             <h4>Deep Convolutional Level Set Method for Image Segmentation</h4>
             <div>
-                Kristiadi, Agustinus, and Pranowo Pranowo. Journal of ICT Research and Applications 11.3 (2017): 284-298.
+              <i>Kristiadi, Agustinus</i>, and Pranowo Pranowo. Journal of ICT Research and Applications 11.3 (2017): 284-298.
             </div>
             [<a href="http://journals.itb.ac.id/index.php/jictra/article/download/3887/3046">pdf</a>]
             [<a href="https://github.com/wiseodd/cnn-levelset">code</a>]
@@ -62,7 +84,7 @@ header-img: "img/about-bg.jpg"
 
             <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
             <div>
-                Kristiadi, Agustinus, Pranowo Pranowo, and Paulus Mudjihartono. DEIS2013.
+              <i>Kristiadi, Agustinus</i>, Pranowo Pranowo, and Paulus Mudjihartono. DEIS2013.
             </div>
             [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
             [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
@@ -70,7 +92,7 @@ header-img: "img/about-bg.jpg"
     </div>
 
     <div class="row" style="padding-top: 3em;">
-        <div class="col-md-3"><h3>Experience</h3></div>
+        <div class="col-md-3"><h3>Academic Experience</h3></div>
         <div class="col-md-9">
             <h4>Smart Data Analytics (SDA) Research</h4>
             <div>Student Research Assistant, 2017-</div>
@@ -82,19 +104,33 @@ header-img: "img/about-bg.jpg"
 
             <div class="row" style="padding-bottom: 1em"></div>
 
+            <h4>Universitas Atma Jaya Yogyakarta</h4>
+            <div>Tutor, Advanced Data Structure, 2012</div>
+            <div>Tutor, Database, 2011</div>
+        </div>
+    </div>
+
+
+    <div class="row" style="padding-top: 3em;">
+        <div class="col-md-3"><h3>Industry Experience</h3></div>
+        <div class="col-md-9">
             <h4>GDP Labs</h4>
-            <div>Software Engineer, 2013-2016</div>
+            <div>Software Engineer, 2013-2015</div>
 
             <div class="row" style="padding-bottom: 1em"></div>
 
             <h4>Astra International</h4>
             <div>Software Engineering Intern, 2012</div>
+        </div>
+    </div>
 
-            <div class="row" style="padding-bottom: 1em"></div>
-
-            <h4>Universitas Atma Jaya Yogyakarta</h4>
-            <div>Tutor, Advanced Data Structure, 2012</div>
-            <div>Tutor, Database, 2011</div>
+    <div class="row" style="padding-top: 3em;">
+        <div class="col-md-3"><h3>Language</h3></div>
+        <div class="col-md-9">
+            <div>English (IELTS 8.0)</div>
+            <div>German (A2) </div>
+            <div>Indonesian (native)</div>
+            <div>Javanese (native)</div>
         </div>
     </div>
 </div>
