--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ header-img: "img/about-bg.jpg"
             <div>
               Chauduri, Debanjan, <i>Agustinus Kristiadi</i>, Jens Lehmann, Asja Fischer. CoNLL (2018).
             </div>
-                <!-- [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>] -->
+                [<a href="https://arxiv.org/abs/1809.03194">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/AK-DE-biGRU">code</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
