--- a/about.html
+++ b/about.html
@@ -41,14 +41,14 @@ header-img: "img/about-bg.jpg"
             <h4>University of Bonn, Germany</h4>
             <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
             <div>Theoretical Computer Science, Intelligent Systems</div>
-            <div>Current grade: 1.21 &nbsp (3.79 <a href="https://www.tum.de/en/studies/application-and-acceptance/grade-conversion-formula-for-grades-earned-outside-germany/">GPA equivalent</a>)</div>
+            <!-- <div>Current grade: 1.21 &nbsp (3.79 <a href="https://www.tum.de/en/studies/application-and-acceptance/grade-conversion-formula-for-grades-earned-outside-germany/">GPA equivalent</a>)</div> -->
 
             <div class="row" style="padding-bottom: 2em"></div>
 
             <h4>Universitas Atma Jaya Yogyakarta, Indonesia</h4>
             <div>B.Eng., Informatics Engineering, 2009-2013</div>
             <div>Numerical Analysis, Soft Computing</div>
-            <div>GPA: 3.93</div>
+            <!-- <div>GPA: 3.93</div> -->
         </div>
     </div>
 
