--- a/about.html
+++ b/about.html
@@ -10,17 +10,22 @@ header-img: "img/about-bg.jpg"
     <h1 class="section-header" style="padding-bottom: 0.8em;">Agustinus Kristiadi</h1>
 
     <div class="row">
-        <div class="col-md-2"><b>Email</b></div>
+        <div class="col-md-3"><b>Email</b></div>
         <div class="col-md-8"><a href="mailto:kristiadi@protonmail.com" target="_top">kristiadi@protonmail.com</a></div>
     </div>
 
     <div class="row">
-        <div class="col-md-2"><b>LinkedIn</b></div>
+        <div class="col-md-3"><b>Google Scholar</b></div>
+        <div class="col-md-8"><a href="https://scholar.google.com/citations?user=_1qe2mYAAAAJ&hl=en">https://scholar.google.com/citations?user=_1qe2mYAAAAJ&hl=en</a></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3"><b>LinkedIn</b></div>
         <div class="col-md-8"><a href="https://www.linkedin.com/in/agustinus-kristiadi/">https://www.linkedin.com/in/agustinus-kristiadi/</a></div>
     </div>
 
     <div class="row">
-        <div class="col-md-2"><b>Github</b></div>
+        <div class="col-md-3"><b>Github</b></div>
         <div class="col-md-8"><a href="https://github.com/wiseodd">https://github.com/wiseodd</a></div>
     </div>
 
@@ -29,9 +34,9 @@ header-img: "img/about-bg.jpg"
     <div class="row">
         <div class="col-md-3"><h3>Interest</h3></div>
         <div class="col-md-9">
-            <div>Bayesian Inference</div>
-            <div>Natural Gradient</div>
-            <div>Generative Models</div>
+            <div>Natural gradient</div>
+            <div>Optimization</div>
+            <div>Bayesian inference</div>
         </div>
     </div>
 
@@ -41,13 +46,14 @@ header-img: "img/about-bg.jpg"
             <h4>University of Bonn, Germany</h4>
             <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
             <div>Theoretical Computer Science, Intelligent Systems</div>
+            <div><a href="/files/cdn_master_thesis.pdf">Master thesis</a></div>
             <!-- <div>Current grade: 1.21 &nbsp (3.79 <a href="https://www.tum.de/en/studies/application-and-acceptance/grade-conversion-formula-for-grades-earned-outside-germany/">GPA equivalent</a>)</div> -->
 
             <div class="row" style="padding-bottom: 2em"></div>
 
             <h4>Universitas Atma Jaya Yogyakarta, Indonesia</h4>
             <div>B.Eng., Informatics Engineering, 2009-2013</div>
-            <div>Numerical Analysis, Soft Computing</div>
+            <div>Numerics, Soft Computing</div>
             <!-- <div>GPA: 3.93</div> -->
         </div>
     </div>
