Update about page

--- a/about.html
+++ b/about.html
@@ -34,9 +34,10 @@ header-img: "img/about-bg.jpg"
     <div class="row">
         <div class="col-md-3"><h3>Interest</h3></div>
         <div class="col-md-9">
-            <div>Natural gradient</div>
+            <div>Geometry</div>
             <div>Optimization</div>
             <div>Bayesian inference</div>
+            <div>Natural gradient</div>
         </div>
     </div>
 
