--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-9">
             <div>Geometry</div>
             <div>Optimization</div>
-            <div>Bayesian inference</div>
             <div>Natural gradient</div>
+            <div>Bayesian inference</div>
         </div>
     </div>
 
@@ -45,17 +45,18 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-3"><h3>Education</h3></div>
         <div class="col-md-9">
             <h4>University of Bonn, Germany</h4>
-            <div>M.Sc., Computer Science, 2017-2019 (expected)</div>
+            <div>M.Sc., Computer Science, 2017-2019</div>
             <div>Theoretical Computer Science, Intelligent Systems</div>
-            <div><a href="/files/cdn_master_thesis.pdf">Master thesis</a></div>
-            <!-- <div>Current grade: 1.21 &nbsp (3.79 <a href="https://www.tum.de/en/studies/application-and-acceptance/grade-conversion-formula-for-grades-earned-outside-germany/">GPA equivalent</a>)</div> -->
+            <div>Thesis: <i><a href="/files/cdn_master_thesis.pdf">Predictive Uncertainty Quantification with Compound Density Networks</a></i></div>
+            <div>Tentative grade: 1.21 &nbsp (3.79 <a href="https://en.wikipedia.org/wiki/Academic_grading_in_Germany#Overview">GPA equivalent</a>)</div>
 
             <div class="row" style="padding-bottom: 2em"></div>
 
             <h4>Universitas Atma Jaya Yogyakarta, Indonesia</h4>
             <div>B.Eng., Informatics Engineering, 2009-2013</div>
             <div>Numerics, Soft Computing</div>
-            <!-- <div>GPA: 3.93</div> -->
+            <div>Thesis: <i>Parallel Particle Swarm Optimization for Image Segmentation</i></div>
+            <div>GPA: 3.93</div>
         </div>
     </div>
 
