--- a/about.html
+++ b/about.html
@@ -44,6 +44,13 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-top: 3em;">
         <div class="col-md-3"><h3>Education</h3></div>
         <div class="col-md-9">
+            <h4>University of Tübingen, Germany</h4>
+            <div>Ph.D., Computer Science, 2019-</div>
+            <div></div>
+            <div><a href="https://uni-tuebingen.de/en/faculties/faculty-of-science/departments/computer-science/lehrstuehle/methods-of-machine-learning/">Methods of Machine Learning group</a>, advised by Philipp Hennig</div>
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
             <h4>University of Bonn, Germany</h4>
             <div>M.Sc., Computer Science, 2017-2019</div>
             <div>Theoretical Computer Science, Intelligent Systems</div>
@@ -103,7 +110,7 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-3"><h3>Academic Experience</h3></div>
         <div class="col-md-9">
             <h4>Smart Data Analytics (SDA) Research</h4>
-            <div>Student Research Assistant, 2017-</div>
+            <div>Student Research Assistant, 2017-2019</div>
 
             <div class="row" style="padding-bottom: 1em"></div>
 
