--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ header-img: "img/about-bg.jpg"
 
     <div class="row">
         <div class="col-md-3"><b>Email</b></div>
-        <div class="col-md-8"><a href="mailto:kristiadi@pm.me" target="_top">kristiadi@pm.me</a></div>
+        <div class="col-md-8">kristiadi[at]pm.me</div>
     </div>
 
     <div class="row">
