--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@ header-img: "img/about-bg.jpg"
     <div class="row">
         <div class="col-md-3"><h3>Interest</h3></div>
         <div class="col-md-9">
-            <div>Geometry</div>
-            <div>Optimization</div>
-            <div>Natural gradient</div>
-            <div>Bayesian inference</div>
+            <div>Riemannian Geometry</div>
+            <div>Adversarial Examples</div>
+            <div>Natural Gradient</div>
+            <div>Bayesian Inference</div>
         </div>
     </div>
 
@@ -55,7 +55,7 @@ header-img: "img/about-bg.jpg"
             <div>M.Sc., Computer Science, 2017-2019</div>
             <div>Theoretical Computer Science, Intelligent Systems</div>
             <div>Thesis: <i><a href="/files/cdn_master_thesis.pdf">Predictive Uncertainty Quantification with Compound Density Networks</a></i></div>
-            <div>Tentative grade: 1.21 &nbsp (3.79 <a href="https://en.wikipedia.org/wiki/Academic_grading_in_Germany#Overview">GPA equivalent</a>)</div>
+            <div>Grade (tentative, still missing 30CP for the thesis): 1.21 (3.79 <a href="https://en.wikipedia.org/wiki/Academic_grading_in_Germany#Overview">GPA equivalent</a>)</div>
 
             <div class="row" style="padding-bottom: 2em"></div>
 
@@ -70,21 +70,30 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-top: 3em;">
         <div class="col-md-3"><h3>Publication</h3></div>
         <div class="col-md-9">
+            <h4>Predictive Uncertainty Quantification with Compound Density Networks</h4>
+            <div>
+                <i>Kristiadi, Agustinus</i> and Asja Fischer. arXiv preprint arXiv:1902.01080 (2019).
+            </div>
+                [<a href="https://arxiv.org/abs/1902.01080">arxiv</a>]
+                [<a href="https://github.com/wiseodd/compound-density-networks">code</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
+            <h4>Incorporating Literals into Knowledge Graph Embeddings</h4>
+            <div>
+              <i>Kristiadi, Agustinus</i>*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. ISWC (2019).
+            </div>
+                [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>]
+                [<a href="https://github.com/SmartDataAnalytics/LiteralE">code</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
             <h4>Improving Response Selection in Multi-turn Dialogue Systems by Incorporating Domain Knowledge</h4>
             <div>
               Chauduri, Debanjan, <i>Agustinus Kristiadi</i>, Jens Lehmann, Asja Fischer. CoNLL (2018).
             </div>
                 [<a href="https://arxiv.org/abs/1809.03194">arxiv</a>]
                 [<a href="https://github.com/SmartDataAnalytics/AK-DE-biGRU">code</a>]
-
-            <div class="row" style="padding-bottom: 2em"></div>
-
-            <h4>Incorporating Literals into Knowledge Graph Embeddings</h4>
-            <div>
-              <i>Kristiadi, Agustinus</i>*, Mohammad Asif Khan*, Denis Lukovnikov, Jens Lehmann, and Asja Fischer. arXiv preprint arXiv:1802.00934 (2018).
-            </div>
-                [<a href="https://arxiv.org/abs/1802.00934">arxiv</a>]
-                [<a href="https://github.com/SmartDataAnalytics/LiteralE">code</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
@@ -99,7 +108,7 @@ header-img: "img/about-bg.jpg"
 
             <h4>Parallel Particle Swarm Optimization for Image Segmentation</h4>
             <div>
-              <i>Kristiadi, Agustinus</i>, Pranowo Pranowo, and Paulus Mudjihartono. DEIS2013.
+              <i>Kristiadi, Agustinus</i>, Pranowo Pranowo, and Paulus Mudjihartono. DEIS (2013).
             </div>
             [<a href="http://sdiwc.net/digital-library/web-admin/upload-pdf/00000491.pdf">pdf</a>]
             [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
@@ -109,7 +118,12 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-top: 3em;">
         <div class="col-md-3"><h3>Academic Experience</h3></div>
         <div class="col-md-9">
-            <h4>Smart Data Analytics (SDA) Research</h4>
+            <h4>Methods of Machine Learning group, University of Tübingen</h4>
+            <div>Research Assistant, 2019-</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>Smart Data Analytics (SDA) group, University of Bonn</h4>
             <div>Student Research Assistant, 2017-2019</div>
 
             <div class="row" style="padding-bottom: 1em"></div>
