--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ header-img: "img/about-bg.jpg"
 
     <div class="row">
         <div class="col-md-3"><b>Email</b></div>
-        <div class="col-md-8">kristiadi[at]pm.me</div>
+        <div class="col-md-8">agustinus.kristiadi[at]uni-tuebingen.de</div>
     </div>
 
     <div class="row">
@@ -55,7 +55,8 @@ header-img: "img/about-bg.jpg"
             <div>M.Sc., Computer Science, 2017-2019</div>
             <div>Theoretical Computer Science, Intelligent Systems</div>
             <div>Thesis: <i><a href="/files/cdn_master_thesis.pdf">Predictive Uncertainty Quantification with Compound Density Networks</a></i></div>
-            <div>Grade (tentative, still missing 30CP for the thesis): 1.21 (3.79 <a href="https://en.wikipedia.org/wiki/Academic_grading_in_Germany#Overview">GPA equivalent</a>)</div>
+            <div>Grade (tentative): 1.21 (3.79 <a href="https://en.wikipedia.org/wiki/Academic_grading_in_Germany#Overview">GPA equivalent</a>)</div>
+            <div>(<b>Note:</b> Study completed, but still waiting for the final thesis grade.)</div>
 
             <div class="row" style="padding-bottom: 2em"></div>
 
