--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ header-img: "img/about-bg.jpg"
             <div>M.Sc., Computer Science, 2017-2019</div>
             <div>Theoretical Computer Science, Intelligent Systems</div>
             <div>Thesis: <i><a href="/files/cdn_master_thesis.pdf">Predictive Uncertainty Quantification with Compound Density Networks</a></i></div>
-            <div>Grade (tentative): 1.16 (3.84 <a href="https://en.wikipedia.org/wiki/Academic_grading_in_Germany#Overview">GPA equivalent</a>)</div>
+            <div>Grade: 1.16 (3.84 <a href="https://en.wikipedia.org/wiki/Academic_grading_in_Germany#Overview">GPA equivalent</a>)</div>
 
             <div class="row" style="padding-bottom: 2em"></div>
 
