--- a/about.html
+++ b/about.html
@@ -34,9 +34,9 @@ header-img: "img/about-bg.jpg"
     <div class="row">
         <div class="col-md-3"><h3>Interest</h3></div>
         <div class="col-md-9">
-            <div>Riemannian Geometry</div>
-            <div>Bayesian Inference</div>
-            <div>Adversarial Examples</div>
+            <div>Uncertainty quantification in deep learning</div>
+            <div>Bayesian inference</div>
+            <div>Riemannian geometry</div>
         </div>
     </div>
 
