[DRAFT] de Rham cohomology

--- a/about.html
+++ b/about.html
@@ -69,6 +69,22 @@ header-img: "img/about-bg.jpg"
     <div class="row" style="padding-top: 3em;">
         <div class="col-md-3"><h3>Publication</h3></div>
         <div class="col-md-9">
+            <h4>Being Bayesian, Even Just a Bit, Fixes Overconfidence in ReLU Networks</h4>
+            <div>
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. arXiv preprint arXiv:2002.10118 (2020).
+            </div>
+                [<a href="https://arxiv.org/abs/2002.10118">arxiv</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
+            <h4>Fast Predictive Uncertainty for Classification with Bayesian Deep Networks</h4>
+            <div>
+                Hobbhahn, Marius, <i>Agustinus Kristiadi</i>, and Philipp Hennig. arXiv preprint arXiv:2003.01227 (2020).
+            </div>
+                [<a href="https://arxiv.org/abs/2003.01227">arxiv</a>]
+
+            <div class="row" style="padding-bottom: 2em"></div>
+
             <h4>Predictive Uncertainty Quantification with Compound Density Networks</h4>
             <div>
                 <i>Kristiadi, Agustinus</i> and Asja Fischer. arXiv preprint arXiv:1902.01080 (2019).
