--- a/about.html
+++ b/about.html
@@ -67,6 +67,63 @@ header-img: "img/about-bg.jpg"
     </div>
 
     <div class="row" style="padding-top: 3em;">
+        <div class="col-md-3"><h3>Teaching</h3></div>
+        <div class="col-md-9">
+            <h4>University of Tübingen</h4>
+            <div>Tutor, Probabilistic Machine Learning, Summer Semester 2020</div>
+            <div>Tutor, Data Literacy, Winter Semester 2019-2020</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>Universitas Atma Jaya Yogyakarta</h4>
+            <div>Tutor, Advanced Data Structure, 2012</div>
+            <div>Tutor, Database, 2011</div>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 3em;">
+        <div class="col-md-3"><h3>Academic Experience</h3></div>
+        <div class="col-md-9">
+            <h4>Methods of Machine Learning group, University of Tübingen</h4>
+            <div>Research Assistant, 2019-</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>Smart Data Analytics (SDA) group, University of Bonn</h4>
+            <div>Student Research Assistant, 2017-2019</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>Universitas Atma Jaya Yogyakarta</h4>
+            <div>Research Assistant, 2016-2017</div>
+        </div>
+    </div>
+
+
+    <div class="row" style="padding-top: 3em;">
+        <div class="col-md-3"><h3>Industry Experience</h3></div>
+        <div class="col-md-9">
+            <h4>GDP Labs</h4>
+            <div>Software Engineer, 2013-2015</div>
+
+            <div class="row" style="padding-bottom: 1em"></div>
+
+            <h4>Astra International</h4>
+            <div>Software Engineering Intern, 2012</div>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 3em;">
+        <div class="col-md-3"><h3>Language</h3></div>
+        <div class="col-md-9">
+            <div>English (IELTS 8.0)</div>
+            <div>German (A2) </div>
+            <div>Indonesian (native)</div>
+            <div>Javanese (native)</div>
+        </div>
+    </div>
+
+    <div class="row" style="padding-top: 3em;">
         <div class="col-md-3"><h3>Publication</h3></div>
         <div class="col-md-9">
             <h4>Being Bayesian, Even Just a Bit, Fixes Overconfidence in ReLU Networks</h4>
@@ -129,54 +186,5 @@ header-img: "img/about-bg.jpg"
             [<a href="https://github.com/wiseodd/swarm-image-segmenter">code</a>]
         </div>
     </div>
-
-    <div class="row" style="padding-top: 3em;">
-        <div class="col-md-3"><h3>Academic Experience</h3></div>
-        <div class="col-md-9">
-            <h4>Methods of Machine Learning group, University of Tübingen</h4>
-            <div>Research Assistant, 2019-</div>
-
-            <div class="row" style="padding-bottom: 1em"></div>
-
-            <h4>Smart Data Analytics (SDA) group, University of Bonn</h4>
-            <div>Student Research Assistant, 2017-2019</div>
-
-            <div class="row" style="padding-bottom: 1em"></div>
-
-            <h4>Universitas Atma Jaya Yogyakarta</h4>
-            <div>Research Assistant, 2016-2017</div>
-
-            <div class="row" style="padding-bottom: 1em"></div>
-
-            <h4>Universitas Atma Jaya Yogyakarta</h4>
-            <div>Tutor, Advanced Data Structure, 2012</div>
-            <div>Tutor, Database, 2011</div>
-        </div>
-    </div>
-
-
-    <div class="row" style="padding-top: 3em;">
-        <div class="col-md-3"><h3>Industry Experience</h3></div>
-        <div class="col-md-9">
-            <h4>GDP Labs</h4>
-            <div>Software Engineer, 2013-2015</div>
-
-            <div class="row" style="padding-bottom: 1em"></div>
-
-            <h4>Astra International</h4>
-            <div>Software Engineering Intern, 2012</div>
-        </div>
-    </div>
-
-    <div class="row" style="padding-top: 3em;">
-        <div class="col-md-3"><h3>Language</h3></div>
-        <div class="col-md-9">
-            <div>English (IELTS 8.0)</div>
-            <div>German (A2) </div>
-            <div>Indonesian (native)</div>
-            <div>Javanese (native)</div>
-        </div>
-    </div>
 </div>
-
 </div>
