--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-9">
             <h4>Being Bayesian, Even Just a Bit, Fixes Overconfidence in ReLU Networks</h4>
             <div>
-                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. arXiv preprint arXiv:2002.10118 (2020).
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML (2020). To appear.
             </div>
                 [<a href="https://arxiv.org/abs/2002.10118">arxiv</a>]
 
