--- a/about.html
+++ b/about.html
@@ -128,9 +128,9 @@ header-img: "img/about-bg.jpg"
         <div class="col-md-9">
             <h4>Being Bayesian, Even Just a Bit, Fixes Overconfidence in ReLU Networks</h4>
             <div>
-                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML (2020). To appear.
+                <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML (2020).
             </div>
-                [<a href="https://arxiv.org/abs/2002.10118">arxiv</a>]
+                [<a href="http://proceedings.mlr.press/v119/kristiadi20a.html">arxiv</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
