--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@ header-img: "img/about-bg.jpg"
             <div>
                 <i>Kristiadi, Agustinus</i>, Matthias Hein, and Philipp Hennig. ICML (2020).
             </div>
-                [<a href="http://proceedings.mlr.press/v119/kristiadi20a.html">arxiv</a>]
+                [<a href="http://proceedings.mlr.press/v119/kristiadi20a.html">abs</a>]
 
             <div class="row" style="padding-bottom: 2em"></div>
 
